# tungsten-app

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  app.css  main.tsx  song.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: album.rs  data.rs  lib.rs  main.rs  song.rs
src-tauri/src/state/: data_manager.rs  mod.rs  playing.rs  playlists.rs  song.rs  volume.rs
src/components/: app-sidebar.tsx  audio-controller.tsx  bottom-bar.tsx  volume-slider.tsx
src/hooks/: data-manager.ts  playing.ts  playlists.ts  song.ts  volume.ts
src/pages/: playlist-view.tsx
